--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
-  },
-  "devDependencies": {}
+    "express": "^4.18.2",
+    "node-fetch": "^3.3.2"
+  }
 }
